--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -6406,7 +6406,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Genomsnittlig bithastighet"
+            "value" : "Medelbithastighet"
           }
         },
         "tr" : {
