Only show error toast when listing OBS scenes when OBS remote control is configured but not connected.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -17589,6 +17589,7 @@
       }
     },
     "Fetching OBS scenes from server..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -27662,6 +27663,7 @@
       }
     },
     "OBS remote control is not configured. Configure it in Settings → Streams → %@ → OBS remote control." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -27768,6 +27770,7 @@
       }
     },
     "OBS remote control is not connected to the server" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
