RTMP server continued.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -31917,6 +31917,9 @@
         }
       }
     },
+    "RTMP server port" : {
+
+    },
     "RTMP stream name missing" : {
       "localizations" : {
         "de" : {
